Fixed Responsive whitespacing

--- a/style.css
+++ b/style.css
@@ -1212,8 +1212,9 @@ form {
 }
 
 .logos {
-  width: 80vw;
-  margin-left: 5vw;
+  width: 85vw;
+  margin-left: 2vw;
+  margin-top: 8vw;
 }
 
 .mainarea {
